# linux_library_nx-gl-tools

./: Android.mk  Makefile.am  README.md  autogen.sh  configure.ac  nx_gl_tools.cpp  nx_gl_tools.h
include/: base_interface.h  nx_gpu_surf.h
